add cocktailByID get request

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,2 @@
 cocktailsBySpirit.url = https://www.thecocktaildb.com/api/json/v1/1/filter.php?i=
+cocktailById.url = https://www.thecocktaildb.com/api/json/v1/1/lookup.php?i=
