--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,4 +2,5 @@ cocktailsBySpirit.url = https://www.thecocktaildb.com/api/json/v1/1/filter.php?i
 filterCocktailsAlcoholic.url = https://www.thecocktaildb.com/api/json/v1/1/filter.php?a=
 cocktailById.url = https://www.thecocktaildb.com/api/json/v1/1/lookup.php?i=
 baseURL.url = https://www.thecocktaildb.com/api/json/v1/1/
+searchName.url = https://www.thecocktaildb.com/api/json/v1/1/search.php?s=
 
