Search cocktail by ingredient

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,4 +3,5 @@ filterCocktailsAlcoholic.url = https://www.thecocktaildb.com/api/json/v1/1/filte
 cocktailById.url = https://www.thecocktaildb.com/api/json/v1/1/lookup.php?i=
 baseURL.url = https://www.thecocktaildb.com/api/json/v1/1/
 searchName.url = https://www.thecocktaildb.com/api/json/v1/1/search.php?s=
+searchIngredient.url = https://www.thecocktaildb.com/api/json/v1/1/filter.php?i=
 
