add spirit description apiservice, model and controller

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 cocktailsBySpirit.url = https://www.thecocktaildb.com/api/json/v1/1/filter.php?i=
 cocktailById.url = https://www.thecocktaildb.com/api/json/v1/1/lookup.php?i=
 baseURL.url = https://www.thecocktaildb.com/api/json/v1/1/
+spiritDescription.url = https://www.thecocktaildb.com/api/json/v1/1/search.php?i=
