add application properties for database

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,4 +6,9 @@ spiritDescription.url = https://www.thecocktaildb.com/api/json/v1/1/search.php?i
 searchName.url = https://www.thecocktaildb.com/api/json/v1/1/search.php?s=
 searchIngredient.url = https://www.thecocktaildb.com/api/json/v1/1/filter.php?i=
 
+spring.datasource.url= jdbc:h2:~/cocktails;AUTO_SERVER=TRUE;DB_CLOSE_ON_EXIT=FALSE
+spring.datasource.username=sa
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.profiles.active=production
+
 
