Fill database with API data

--- a/application.properties
+++ b/application.properties
@@ -1,3 +1,7 @@
 cocktailsBySpirit.url = https://www.thecocktaildb.com/api/json/v1/1/filter.php?i=
 cocktailById.url = https://www.thecocktaildb.com/api/json/v1/1/lookup.php?i=
 baseURL.url = https://www.thecocktaildb.com/api/json/v1/1/
+spring.datasource.url=jdbc:h2:~/cocktails;AUTO_SERVER=TRUE;DB_CLOSE_ON_EXIT=FALSE
+spring.datasource.username=sa
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.profiles.active=production
