Save List of NewCocktails into repository

--- a/application.properties
+++ b/application.properties
@@ -3,5 +3,6 @@ cocktailById.url = https://www.thecocktaildb.com/api/json/v1/1/lookup.php?i=
 baseURL.url = https://www.thecocktaildb.com/api/json/v1/1/
 spring.datasource.url=jdbc:h2:~/cocktails;AUTO_SERVER=TRUE;DB_CLOSE_ON_EXIT=FALSE
 spring.datasource.username=sa
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 spring.profiles.active=production
+cocktailsByLetter.url = https://www.thecocktaildb.com/api/json/v1/1/search.php?f=
