Update application properties

--- a/application.properties
+++ b/application.properties
@@ -6,3 +6,7 @@ spring.datasource.username=sa
 spring.jpa.hibernate.ddl-auto=update
 spring.profiles.active=production
 cocktailsByLetter.url = https://www.thecocktaildb.com/api/json/v1/1/search.php?f=
+
+# Security
+cocktail.app.jwtSecret= SodaliciousSecretKey
+cocktail.app.jwtExpirationMs= 86400000
