--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,4 +11,4 @@ spring.datasource.username=sa
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.profiles.active=production
 
-
+frontendHost.url = http://localhost:3000
